--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "ISC",
   "author": "swcbo",
   "scripts": {
+    "start": "vite --mode dev",
     "dev": "vite --mode dev",
     "pre": "vite --mode pre",
     "prod": "vite --mode prod",
