--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ahooks": "^3.7.8",
     "antd-mobile": "^5.0.0-rc.19",
     "axios": "^0.21.4",
+    "clsx": "^2.1.0",
     "history": "^5.3.0",
     "lib-flexible": "^0.3.2",
     "react": "^17.0.2",
